--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,7 +20,8 @@ website:
             target: "_new"
             icon: "fa address-card"
       - href: join.qmd
-        text: "<span class='btn btn-primary'>Click here</span>"
+        # text: "<span class='btn btn-primary'>Click here</span>"
+        text: "Get Involved"
         icon: "fa handshake"
     right:
       - text: "{{< iconify bi envelope size=1.1em title='E-mail' >}}"
@@ -28,6 +29,7 @@ website:
       - text: "{{< iconify bi github size=1.1em title='GitHub' >}}"
         href: https://github.com/India-INvenTree
         rel: me
+        target: "_new"
   page-footer:
     # left: |
     #   <span class="faux-block">{{< fa brands creative-commons >}} {{< var years >}} Andrew Heiss</span>
