--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,14 +36,18 @@ website:
         rel: me
         target: "_new"
   page-footer:
-    # left: |
-    #   <span class="faux-block">{{< fa brands creative-commons >}} {{< var years >}} Andrew Heiss</span>
-    #   <span class="faux-block">All content licensed under<br>[{{< fa brands creative-commons >}} {{< fa brands creative-commons-by >}} Creative Commons CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)</span>      
-    # center: |
-    #   <span class="faux-block">{{< fa brands orcid >}} <strong>ORCID</strong> [{{< var orcid >}}](https://orcid.org/{{< var orcid >}})</span>
-    #   <span class="faux-block">{{< fa key >}} [PGP public key]({{< var pgp.key >}}) &emsp; {{< fa fingerprint >}} Fingerprint:</strong><br><span class="fingerprint">{{< var pgp.fingerprint >}}</span></span>
-      right: |
-        <span class="faux-block">Made with {{< fa brands r-project >}} and [Quarto](https://quarto.org/)</span>
+    border: true
+    left: "&#169; 2025 INvenTree"
+    center:
+      - text: Code of conduct
+        href: coc.qmd
+        icon: check-circle
+      - text: Accessibility
+        href: accessibility.qmd
+        icon: universal-access-circle
+      # - text: License
+      #   href: license.qmd
+    right: "made with ︎♥️ & [Quarto](https://quarto.org)"
 
 
 format:
